[tool.poetry]
name = "date-quarter"
version = "0.1.0"
description = "Simple quarter support for python `datetime.date`. Fork of https://github.com/BetaS/datetime-quarter.git"
authors = ["Matt Sharp <matthew.sharp3@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
