[tool.poetry]
name = "date-quarter"
version = "0.1.0"
description = "Simple quarter support for python `datetime.date`. Fork of https://github.com/BetaS/datetime-quarter.git with additional functionality"
authors = ["BetaS <thou1999@gmail.com>","Matt Sharp <matthew.sharp3@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
